<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".activities.SettingActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="#231500">

        <ImageButton
            android:id="@+id/imageButtonBack"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:background="@drawable/arrow_back"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/setting"
            android:textColor="#ffffff"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/general"
                android:textColor="#ffffff"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/layoutSaveSilently"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:text="@string/save_silently"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/checkBoxSaveSilently"
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_16sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:clickable="false" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:includeFontPadding="false"
                    android:text="@string/save_silently_description"
                    android:textColor="#494545"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutAutoStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:text="@string/auto_start"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/checkBoxAutoStart"
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_16sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:clickable="false" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:includeFontPadding="false"
                    android:text="@string/automatically_start_on_boot"
                    android:textColor="#494545"
                    android:textSize="@dimen/_12ssp" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/layoutStopService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:text="@string/stop_service"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/checkBoxStopService"
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_16sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:clickable="false" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:includeFontPadding="false"
                    android:text="@string/stop_service_description"
                    android:textColor="#494545"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:background="@android:color/background_light"
                android:contentDescription="@string/app_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/layout"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/_20ssp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/layoutTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_weight="1"
                        android:text="@string/theme"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:text="@string/light"
                        android:textColor="#FFFB24"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:contentDescription="@string/app_name"
                android:src="@android:color/background_light" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/storage"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/_20ssp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/layoutSaveLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_weight="1"
                        android:text="@string/save_location"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:text="@string/file_location"
                        android:textColor="#FFFB24"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutFileName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_weight="1"
                        android:text="@string/filename"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewFileName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_40sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:textColor="#FFFB24"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>