<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBarCrop"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="#231500">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButtonBackArrowCrop"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/arrow_back"
                android:contentDescription="@string/app_name" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/imageButtonRotate"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:src="@drawable/rotate" />

            <ImageButton
                android:id="@+id/imageButtonFlipOver"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"

                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:src="@drawable/vertical" />

            <ImageButton
                android:id="@+id/imageButtonCut"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"

                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:src="@drawable/cut"
                app:tint="#FFFFFFFF" />
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <com.theartofdev.edmodo.cropper.CropImageView
        android:id="@+id/imageView"
        android:layout_margin="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/toolBarCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <ImageView
        android:id="@+id/magic"
        android:visibility="gone"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:id="@+id/layoutRotateHolder"
        android:visibility="gone"
        android:background="#ffffff"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewRotateHorizontal"
            android:text="@string/rotate_horizontal"
            android:textSize="@dimen/_16ssp"
            android:textColor="#000000"
            android:padding="@dimen/_8sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textViewRotateVertical"
            android:text="@string/rotate_vertical"
            android:textSize="@dimen/_16ssp"
            android:textColor="#000000"
            android:padding="@dimen/_8sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>